@@ -5,6 +5,7 @@
 #include "../src/builtin/dosmid.h"
 #include "../src/builtin/mpxplay.h"
 #include "../src/builtin/glide2x.h"
+#include "../src/builtin/textutil.h"
 #include "../src/builtin/4DOS_img.h"
 
 extern struct BuiltinFileBlob bfb_DSXMENU_EXE_PC;		// DSXMENU.EXE
@@ -43,4 +44,5 @@ extern struct BuiltinFileBlob bfb_CDPLAY_EXE;	// CDPLAY.EXE
 extern struct BuiltinFileBlob bfb_DOSMID_EXE;	// DOSMID.EXE
 extern struct BuiltinFileBlob bfb_MPXPLAY_EXE;	// MPXPLAY.EXE
 extern struct BuiltinFileBlob bfb_GLIDE2X_OVL;	// GLIDE2X.OVL
+extern struct BuiltinFileBlob bfb_TEXTUTIL_ZIP;	// TEXTUTIL.ZIP
 
