@@ -1,0 +1,178 @@
+static const unsigned char bin_textutil_zip[] = {
+	0x50,0x4B,0x03,0x04,0x14,0x00,0x00,0x00,0x08,0x00,0xD6,
+	0x39,0x99,0x4F,0x8F,0xD5,0x0D,0xA4,0x16,0x00,0x00,0x00,
+	0x13,0x00,0x00,0x00,0x0A,0x00,0x00,0x00,0x31,0x33,0x32,
+	0x58,0x38,0x36,0x2E,0x43,0x4F,0x4D,0xDB,0x11,0xC2,0x70,
+	0x56,0x60,0x87,0x90,0xE0,0x59,0x81,0x2D,0x8C,0x3B,0x39,
+	0x38,0xCE,0x0A,0x9C,0x55,0x00,0x00,0x50,0x4B,0x03,0x04,
+	0x14,0x00,0x00,0x00,0x08,0x00,0xD6,0x39,0x99,0x4F,0x6E,
+	0x63,0x5F,0x4B,0x16,0x00,0x00,0x00,0x13,0x00,0x00,0x00,
+	0x0A,0x00,0x00,0x00,0x31,0x33,0x32,0x58,0x35,0x30,0x2E,
+	0x43,0x4F,0x4D,0xDB,0x11,0xCA,0x70,0x56,0x60,0x87,0x90,
+	0xE0,0x59,0x81,0x2D,0x8C,0x3B,0x39,0x38,0xCE,0x0A,0x9C,
+	0x55,0x00,0x00,0x50,0x4B,0x03,0x04,0x14,0x00,0x00,0x00,
+	0x08,0x00,0xD6,0x39,0x99,0x4F,0x9D,0x5B,0x8E,0x0F,0x09,
+	0x00,0x00,0x00,0x07,0x00,0x00,0x00,0x0A,0x00,0x00,0x00,
+	0x31,0x33,0x32,0x58,0x32,0x35,0x2E,0x43,0x4F,0x4D,0xDB,
+	0x11,0xCA,0x70,0x56,0xE0,0xAC,0x02,0x00,0x50,0x4B,0x03,
+	0x04,0x14,0x00,0x00,0x00,0x08,0x00,0xD6,0x39,0x99,0x4F,
+	0x38,0x88,0xD2,0xC4,0x09,0x00,0x00,0x00,0x07,0x00,0x00,
+	0x00,0x0A,0x00,0x00,0x00,0x31,0x33,0x32,0x58,0x34,0x33,
+	0x2E,0x43,0x4F,0x4D,0xDB,0x11,0xC2,0x70,0x56,0xE0,0xAC,
+	0x02,0x00,0x50,0x4B,0x03,0x04,0x14,0x00,0x00,0x00,0x08,
+	0x00,0xD6,0x39,0x99,0x4F,0x77,0xB0,0x59,0xD5,0x09,0x00,
+	0x00,0x00,0x07,0x00,0x00,0x00,0x09,0x00,0x00,0x00,0x38,
+	0x30,0x78,0x32,0x35,0x2E,0x43,0x4F,0x4D,0xDB,0xC1,0xCC,
+	0x70,0x56,0xE0,0xAC,0x02,0x00,0x50,0x4B,0x03,0x04,0x14,
+	0x00,0x00,0x00,0x08,0x00,0xD6,0x39,0x99,0x4F,0xFC,0xB3,
+	0x7F,0x61,0x1B,0x00,0x00,0x00,0x1A,0x00,0x00,0x00,0x09,
+	0x00,0x00,0x00,0x38,0x30,0x58,0x35,0x30,0x2E,0x43,0x4F,
+	0x4D,0xDB,0xC1,0x24,0xB4,0xD9,0xE0,0xAC,0xC0,0x0E,0x66,
+	0x06,0x20,0x21,0x24,0x78,0x56,0x60,0x0B,0xE3,0x4E,0x0E,
+	0x8E,0xB3,0x02,0x67,0x15,0x00,0x50,0x4B,0x03,0x04,0x14,
+	0x00,0x00,0x00,0x08,0x00,0xD6,0x39,0x99,0x4F,0x43,0x9F,
+	0xF8,0xF9,0x10,0x00,0x00,0x00,0x0E,0x00,0x00,0x00,0x07,
+	0x00,0x00,0x00,0x43,0x47,0x41,0x2E,0x43,0x4F,0x4D,0xDB,
+	0xC1,0x20,0xB4,0xD9,0xE0,0xAC,0xC0,0x0E,0x66,0x86,0xB3,
+	0x02,0x67,0x15,0x00,0x50,0x4B,0x03,0x04,0x14,0x00,0x00,
+	0x00,0x08,0x00,0xD6,0x39,0x99,0x4F,0xF1,0x91,0x7F,0x7D,
+	0x3F,0x00,0x00,0x00,0x3A,0x00,0x00,0x00,0x07,0x00,0x00,
+	0x00,0x43,0x4C,0x52,0x2E,0x43,0x4F,0x4D,0x01,0x3A,0x00,
+	0xC5,0xFF,0xB4,0x0F,0xCD,0x10,0x24,0x7F,0x3C,0x03,0x76,
+	0x10,0x3C,0x07,0x74,0x0C,0x3C,0x54,0x74,0x08,0x3C,0x55,
+	0x74,0x04,0xB4,0x00,0xEB,0x1C,0xB4,0x06,0xB0,0x00,0xB7,
+	0x07,0x33,0xC9,0x8E,0xD9,0x8A,0x36,0x84,0x04,0x8A,0x16,
+	0x4A,0x04,0xFE,0xCA,0xCD,0x10,0xB4,0x02,0xB7,0x00,0x33,
+	0xD2,0xCD,0x10,0xCD,0x20,0x50,0x4B,0x03,0x04,0x14,0x00,
+	0x00,0x00,0x08,0x00,0xD6,0x39,0x99,0x4F,0xC6,0x46,0x6E,
+	0x24,0x10,0x00,0x00,0x00,0x0E,0x00,0x00,0x00,0x07,0x00,
+	0x00,0x00,0x45,0x47,0x41,0x2E,0x43,0x4F,0x4D,0xDB,0xC1,
+	0x28,0xB4,0xD9,0xE0,0xAC,0xC0,0x0E,0x66,0x86,0xB3,0x02,
+	0x67,0x15,0x00,0x50,0x4B,0x03,0x04,0x14,0x00,0x00,0x00,
+	0x08,0x00,0xD6,0x39,0x99,0x4F,0x99,0xE2,0xB3,0xAF,0xCD,
+	0x00,0x00,0x00,0xC8,0x00,0x00,0x00,0x0B,0x00,0x00,0x00,
+	0x53,0x43,0x41,0x4E,0x52,0x45,0x53,0x2E,0x43,0x4F,0x4D,
+	0x01,0xC8,0x00,0x37,0xFF,0xE9,0x9D,0x00,0x00,0x00,0x0A,
+	0xE4,0x74,0x1E,0x80,0xFC,0x11,0x74,0x15,0x80,0xFC,0x12,
+	0x75,0xED,0x80,0xFB,0x30,0x75,0xE8,0x3C,0x02,0x77,0x06,
+	0x2E,0xA2,0x9F,0x01,0x8A,0xC4,0xCF,0xA8,0x10,0x74,0xD9,
+	0x9C,0x0E,0xE8,0xD4,0xFF,0x50,0x51,0x52,0x56,0x1E,0x0E,
+	0x1F,0x0A,0xE4,0xBA,0x5A,0x01,0x75,0x03,0xBA,0x6E,0x01,
+	0xB4,0x0F,0xCD,0x10,0x24,0x7F,0x3C,0x03,0x76,0x04,0x3C,
+	0x07,0x75,0x09,0x80,0x3E,0x9F,0x01,0x01,0x77,0x02,0xFF,
+	0xD2,0x1F,0x5E,0x5A,0x59,0x58,0xCF,0xB8,0xC7,0x00,0x75,
+	0x03,0xB8,0x5D,0x01,0x33,0xD2,0x8E,0xDA,0xF6,0x3E,0x85,
+	0x04,0xA2,0x84,0x04,0xC3,0xBE,0x8D,0x01,0x75,0x03,0xBE,
+	0x95,0x01,0xBA,0xD4,0x03,0xFC,0xAC,0x32,0xE4,0x8B,0xC8,
+	0xAC,0xEE,0x42,0xAC,0xEE,0x4A,0xE2,0xF8,0xAC,0xB4,0x11,
+	0xCD,0x10,0xC3,0x03,0x09,0xC7,0x0A,0x06,0x0B,0x07,0x12,
+	0x04,0x09,0x4D,0x0A,0x0B,0x0B,0x0C,0x12,0x5D,0x11,0x02,
+	0xB8,0x10,0x35,0xCD,0x21,0xFE,0x06,0x00,0x01,0x89,0x1E,
+	0x01,0x01,0x8C,0x06,0x03,0x01,0xBA,0x05,0x01,0xB4,0x25,
+	0xCD,0x21,0x8E,0x06,0x2C,0x00,0xB4,0x49,0xCD,0x21,0xBA,
+	0x1A,0x00,0xB8,0x00,0x31,0xCD,0x21,0x50,0x4B,0x03,0x04,
+	0x14,0x00,0x00,0x00,0x08,0x00,0xD6,0x39,0x99,0x4F,0x08,
+	0x2A,0xA4,0x99,0x10,0x00,0x00,0x00,0x0E,0x00,0x00,0x00,
+	0x07,0x00,0x00,0x00,0x56,0x47,0x41,0x2E,0x43,0x4F,0x4D,
+	0xDB,0xC1,0x24,0xB4,0xD9,0xE0,0xAC,0xC0,0x0E,0x66,0x86,
+	0xB3,0x02,0x67,0x15,0x00,0x50,0x4B,0x01,0x02,0x1F,0x00,
+	0x14,0x00,0x00,0x00,0x08,0x00,0xD6,0x39,0x99,0x4F,0x8F,
+	0xD5,0x0D,0xA4,0x16,0x00,0x00,0x00,0x13,0x00,0x00,0x00,
+	0x0A,0x00,0x24,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x20,
+	0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x31,0x33,0x32,0x58,
+	0x38,0x36,0x2E,0x43,0x4F,0x4D,0x0A,0x00,0x20,0x00,0x00,
+	0x00,0x00,0x00,0x01,0x00,0x18,0x00,0x00,0x52,0x3D,0xE4,
+	0x1C,0xBB,0xD5,0x01,0x00,0xCE,0x49,0x00,0xDC,0xAB,0xD6,
+	0x01,0x40,0x8C,0xEB,0x00,0xDC,0xAB,0xD6,0x01,0x50,0x4B,
+	0x01,0x02,0x1F,0x00,0x14,0x00,0x00,0x00,0x08,0x00,0xD6,
+	0x39,0x99,0x4F,0x6E,0x63,0x5F,0x4B,0x16,0x00,0x00,0x00,
+	0x13,0x00,0x00,0x00,0x0A,0x00,0x24,0x00,0x00,0x00,0x00,
+	0x00,0x00,0x00,0x20,0x00,0x00,0x00,0x3E,0x00,0x00,0x00,
+	0x31,0x33,0x32,0x58,0x35,0x30,0x2E,0x43,0x4F,0x4D,0x0A,
+	0x00,0x20,0x00,0x00,0x00,0x00,0x00,0x01,0x00,0x18,0x00,
+	0x00,0x52,0x3D,0xE4,0x1C,0xBB,0xD5,0x01,0x00,0xCE,0x49,
+	0x00,0xDC,0xAB,0xD6,0x01,0x20,0x20,0xF0,0x00,0xDC,0xAB,
+	0xD6,0x01,0x50,0x4B,0x01,0x02,0x1F,0x00,0x14,0x00,0x00,
+	0x00,0x08,0x00,0xD6,0x39,0x99,0x4F,0x9D,0x5B,0x8E,0x0F,
+	0x09,0x00,0x00,0x00,0x07,0x00,0x00,0x00,0x0A,0x00,0x24,
+	0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x20,0x00,0x00,0x00,
+	0x7C,0x00,0x00,0x00,0x31,0x33,0x32,0x58,0x32,0x35,0x2E,
+	0x43,0x4F,0x4D,0x0A,0x00,0x20,0x00,0x00,0x00,0x00,0x00,
+	0x01,0x00,0x18,0x00,0x00,0x52,0x3D,0xE4,0x1C,0xBB,0xD5,
+	0x01,0x00,0xCE,0x49,0x00,0xDC,0xAB,0xD6,0x01,0xC0,0xA6,
+	0xF1,0x00,0xDC,0xAB,0xD6,0x01,0x50,0x4B,0x01,0x02,0x1F,
+	0x00,0x14,0x00,0x00,0x00,0x08,0x00,0xD6,0x39,0x99,0x4F,
+	0x38,0x88,0xD2,0xC4,0x09,0x00,0x00,0x00,0x07,0x00,0x00,
+	0x00,0x0A,0x00,0x24,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	0x20,0x00,0x00,0x00,0xAD,0x00,0x00,0x00,0x31,0x33,0x32,
+	0x58,0x34,0x33,0x2E,0x43,0x4F,0x4D,0x0A,0x00,0x20,0x00,
+	0x00,0x00,0x00,0x00,0x01,0x00,0x18,0x00,0x00,0x52,0x3D,
+	0xE4,0x1C,0xBB,0xD5,0x01,0x00,0xCE,0x49,0x00,0xDC,0xAB,
+	0xD6,0x01,0xA0,0x3A,0xF6,0x00,0xDC,0xAB,0xD6,0x01,0x50,
+	0x4B,0x01,0x02,0x1F,0x00,0x14,0x00,0x00,0x00,0x08,0x00,
+	0xD6,0x39,0x99,0x4F,0x77,0xB0,0x59,0xD5,0x09,0x00,0x00,
+	0x00,0x07,0x00,0x00,0x00,0x09,0x00,0x24,0x00,0x00,0x00,
+	0x00,0x00,0x00,0x00,0x20,0x00,0x00,0x00,0xDE,0x00,0x00,
+	0x00,0x38,0x30,0x78,0x32,0x35,0x2E,0x43,0x4F,0x4D,0x0A,
+	0x00,0x20,0x00,0x00,0x00,0x00,0x00,0x01,0x00,0x18,0x00,
+	0x00,0x52,0x3D,0xE4,0x1C,0xBB,0xD5,0x01,0x00,0xCE,0x49,
+	0x00,0xDC,0xAB,0xD6,0x01,0xE0,0x47,0xF9,0x00,0xDC,0xAB,
+	0xD6,0x01,0x50,0x4B,0x01,0x02,0x1F,0x00,0x14,0x00,0x00,
+	0x00,0x08,0x00,0xD6,0x39,0x99,0x4F,0xFC,0xB3,0x7F,0x61,
+	0x1B,0x00,0x00,0x00,0x1A,0x00,0x00,0x00,0x09,0x00,0x24,
+	0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x20,0x00,0x00,0x00,
+	0x0E,0x01,0x00,0x00,0x38,0x30,0x58,0x35,0x30,0x2E,0x43,
+	0x4F,0x4D,0x0A,0x00,0x20,0x00,0x00,0x00,0x00,0x00,0x01,
+	0x00,0x18,0x00,0x00,0x52,0x3D,0xE4,0x1C,0xBB,0xD5,0x01,
+	0x00,0xCE,0x49,0x00,0xDC,0xAB,0xD6,0x01,0x80,0x99,0xEE,
+	0x00,0xDC,0xAB,0xD6,0x01,0x50,0x4B,0x01,0x02,0x1F,0x00,
+	0x14,0x00,0x00,0x00,0x08,0x00,0xD6,0x39,0x99,0x4F,0x43,
+	0x9F,0xF8,0xF9,0x10,0x00,0x00,0x00,0x0E,0x00,0x00,0x00,
+	0x07,0x00,0x24,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x20,
+	0x00,0x00,0x00,0x50,0x01,0x00,0x00,0x43,0x47,0x41,0x2E,
+	0x43,0x4F,0x4D,0x0A,0x00,0x20,0x00,0x00,0x00,0x00,0x00,
+	0x01,0x00,0x18,0x00,0x00,0x52,0x3D,0xE4,0x1C,0xBB,0xD5,
+	0x01,0x00,0xCE,0x49,0x00,0xDC,0xAB,0xD6,0x01,0x60,0x2D,
+	0xF3,0x00,0xDC,0xAB,0xD6,0x01,0x50,0x4B,0x01,0x02,0x1F,
+	0x00,0x14,0x00,0x00,0x00,0x08,0x00,0xD6,0x39,0x99,0x4F,
+	0xF1,0x91,0x7F,0x7D,0x3F,0x00,0x00,0x00,0x3A,0x00,0x00,
+	0x00,0x07,0x00,0x24,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	0x20,0x00,0x00,0x00,0x85,0x01,0x00,0x00,0x43,0x4C,0x52,
+	0x2E,0x43,0x4F,0x4D,0x0A,0x00,0x20,0x00,0x00,0x00,0x00,
+	0x00,0x01,0x00,0x18,0x00,0x00,0x52,0x3D,0xE4,0x1C,0xBB,
+	0xD5,0x01,0x00,0xCE,0x49,0x00,0xDC,0xAB,0xD6,0x01,0x20,
+	0x55,0xFC,0x00,0xDC,0xAB,0xD6,0x01,0x50,0x4B,0x01,0x02,
+	0x1F,0x00,0x14,0x00,0x00,0x00,0x08,0x00,0xD6,0x39,0x99,
+	0x4F,0xC6,0x46,0x6E,0x24,0x10,0x00,0x00,0x00,0x0E,0x00,
+	0x00,0x00,0x07,0x00,0x24,0x00,0x00,0x00,0x00,0x00,0x00,
+	0x00,0x20,0x00,0x00,0x00,0xE9,0x01,0x00,0x00,0x45,0x47,
+	0x41,0x2E,0x43,0x4F,0x4D,0x0A,0x00,0x20,0x00,0x00,0x00,
+	0x00,0x00,0x01,0x00,0x18,0x00,0x00,0x52,0x3D,0xE4,0x1C,
+	0xBB,0xD5,0x01,0x00,0xCE,0x49,0x00,0xDC,0xAB,0xD6,0x01,
+	0x60,0x2D,0xF3,0x00,0xDC,0xAB,0xD6,0x01,0x50,0x4B,0x01,
+	0x02,0x1F,0x00,0x14,0x00,0x00,0x00,0x08,0x00,0xD6,0x39,
+	0x99,0x4F,0x99,0xE2,0xB3,0xAF,0xCD,0x00,0x00,0x00,0xC8,
+	0x00,0x00,0x00,0x0B,0x00,0x24,0x00,0x00,0x00,0x00,0x00,
+	0x00,0x00,0x20,0x00,0x00,0x00,0x1E,0x02,0x00,0x00,0x53,
+	0x43,0x41,0x4E,0x52,0x45,0x53,0x2E,0x43,0x4F,0x4D,0x0A,
+	0x00,0x20,0x00,0x00,0x00,0x00,0x00,0x01,0x00,0x18,0x00,
+	0x00,0x52,0x3D,0xE4,0x1C,0xBB,0xD5,0x01,0x00,0xCE,0x49,
+	0x00,0xDC,0xAB,0xD6,0x01,0x60,0x62,0xFF,0x00,0xDC,0xAB,
+	0xD6,0x01,0x50,0x4B,0x01,0x02,0x1F,0x00,0x14,0x00,0x00,
+	0x00,0x08,0x00,0xD6,0x39,0x99,0x4F,0x08,0x2A,0xA4,0x99,
+	0x10,0x00,0x00,0x00,0x0E,0x00,0x00,0x00,0x07,0x00,0x24,
+	0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x20,0x00,0x00,0x00,
+	0x14,0x03,0x00,0x00,0x56,0x47,0x41,0x2E,0x43,0x4F,0x4D,
+	0x0A,0x00,0x20,0x00,0x00,0x00,0x00,0x00,0x01,0x00,0x18,
+	0x00,0x00,0x52,0x3D,0xE4,0x1C,0xBB,0xD5,0x01,0x00,0xCE,
+	0x49,0x00,0xDC,0xAB,0xD6,0x01,0x00,0xB4,0xF4,0x00,0xDC,
+	0xAB,0xD6,0x01,0x50,0x4B,0x05,0x06,0x00,0x00,0x00,0x00,
+	0x0B,0x00,0x0B,0x00,0xE7,0x03,0x00,0x00,0x49,0x03,0x00,
+	0x00,0x00,0x00,
+};
+
+struct BuiltinFileBlob bfb_TEXTUTIL_ZIP = {
+	/*recommended file name*/	"TEXTUTIL.ZIP",
+	/*data*/			bin_textutil_zip,
+	/*length*/			sizeof(bin_textutil_zip)
+};
