@@ -164,6 +164,10 @@
     on the Windows host. A toggle menu item "Quiet mode
     (no start messages)" is added to the "Windows host
     applications" menu group in "DOS" menu. (Wengier)
+  - Added zip package TEXTUTIL.ZIP to the Z drive that
+    contains various utilities (e.g. CGA.COM, EGA.COM,
+    132X25.COM, 132X43.COM, etc) to change the video
+    setting in the text mode. (Wengier)
   - Updated MPXPLAY to latest version 1.65. (Wengier)
   - Integrated SVN commits (Allofich)
     - r4371: Fix regression in Clue: Master Detective.
